# sysmonv2

./: .gitignore  CMakeLists.txt  README.md  SPECIFICATION.md  SteamGauge.cpp  SteamGauge.h  SystemMonitorV2.cpp  SystemMonitorV2.h  Version.h.in  main.cpp  measure_tps.py  netmon_parser.cpp  netmon_parser.h  usb_monitor.py
tests/: CMakeLists.txt  test_netmon.cpp  test_steamgauge.cpp  test_sysmonv2_ui.cpp
